--- a/unlocked-blueprint.html
+++ b/unlocked-blueprint.html
@@ -6,14 +6,6 @@
   <title>Your Erotic Blueprint</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Erotic Blueprint</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <style>
     body {
       margin: 0;
       padding: 0;
@@ -23,7 +15,7 @@
     }
 
     .border-wrapper {
-      padding: 20px 0; /* removed horizontal padding */
+      padding: 20px 10px; /* narrow horizontal padding */
       border: 6px solid;
       border-image: linear-gradient(to right, #950606, #064D95, #06954E) 1;
       min-height: 100vh;
@@ -52,19 +44,17 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 30px;
-      padding: 0 0 60px 0; /* no side padding */
-      margin: 0;
+      padding-bottom: 60px;
     }
 
     .card {
       background-color: #1a1a1a;
       border: 3px solid gold;
       border-radius: 14px;
-      width: 250px;
+      width: 260px;
       text-align: center;
       overflow: hidden;
       transition: transform 0.3s;
-      margin: 0;
     }
 
     .card:hover {
@@ -82,6 +72,7 @@
     .card h3 {
       font-size: 1.2rem;
       margin: 15px 0;
+      color: white;
     }
 
     .card a {
