--- a/unlocked-blueprint.html
+++ b/unlocked-blueprint.html
@@ -15,7 +15,7 @@
     }
 
     .border-wrapper {
-      padding: 20px 10px; /* narrow horizontal padding */
+      padding: 20px;
       border: 6px solid;
       border-image: linear-gradient(to right, #950606, #064D95, #06954E) 1;
       min-height: 100vh;
@@ -49,7 +49,6 @@
 
     .card {
       background-color: #1a1a1a;
-      border: 3px solid gold;
       border-radius: 14px;
       width: 260px;
       text-align: center;
@@ -61,18 +60,24 @@
       transform: scale(1.04);
     }
 
-    .card img {
+    .image-border {
+      border: 6px solid;
+      border-image: linear-gradient(to right, #950606, #064D95, #06954E) 1;
+      border-radius: 12px;
+      overflow: hidden;
+      margin-bottom: 12px;
+    }
+
+    .image-border img {
       width: 100%;
       height: 320px;
       object-fit: cover;
       display: block;
-      border-bottom: 3px solid gold;
     }
 
     .card h3 {
       font-size: 1.2rem;
       margin: 15px 0;
-      color: white;
     }
 
     .card a {
@@ -103,62 +108,97 @@
 
     <div class="grid">
       <div class="card">
-        <img src="/images/tender_protector_female.jpg" alt="Tender Protector">
+        <div class="image-border">
+          <img src="/images/tender_protector_female.jpg" alt="Tender Protector">
+        </div>
         <h3>Tender Protector</h3>
         <a href="/profiles/tender_protector.html">View Profile</a>
       </div>
+
       <div class="card">
-        <img src="/images/devoted_darling_male.jpg" alt="Devoted Darling">
+        <div class="image-border">
+          <img src="/images/devoted_darling_male.jpg" alt="Devoted Darling">
+        </div>
         <h3>Devoted Darling</h3>
         <a href="/profiles/devoted_darling.html">View Profile</a>
       </div>
+
       <div class="card">
-        <img src="/images/mood_multiplier_male.jpg" alt="Mood Multiplier">
+        <div class="image-border">
+          <img src="/images/mood_multiplier_male.jpg" alt="Mood Multiplier">
+        </div>
         <h3>Mood Multiplier</h3>
         <a href="/profiles/mood_multiplier.html">View Profile</a>
       </div>
+
       <div class="card">
-        <img src="/images/heatwave_female.jpg" alt="Heatwave">
+        <div class="image-border">
+          <img src="/images/heatwave_female.jpg" alt="Heatwave">
+        </div>
         <h3>Heatwave</h3>
         <a href="/profiles/heatwave.html">View Profile</a>
       </div>
+
       <div class="card">
-        <img src="/images/generous_giver_male.jpg" alt="Generous Giver">
+        <div class="image-border">
+          <img src="/images/generous_giver_male.jpg" alt="Generous Giver">
+        </div>
         <h3>Generous Giver</h3>
         <a href="/profiles/generous_giver.html">View Profile</a>
       </div>
+
       <div class="card">
-        <img src="/images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything">
+        <div class="image-border">
+          <img src="/images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything">
+        </div>
         <h3>Promiscuous Plaything</h3>
         <a href="/profiles/promiscuous_plaything.html">View Profile</a>
       </div>
+
       <div class="card">
-        <img src="/images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer">
+        <div class="image-border">
+          <img src="/images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer">
+        </div>
         <h3>Bedroom Adventurer</h3>
         <a href="/profiles/bedroom_adventurer.html">View Profile</a>
       </div>
+
       <div class="card">
-        <img src="/images/charmer_in_charge_female.jpg" alt="Charmer in Charge">
+        <div class="image-border">
+          <img src="/images/charmer_in_charge_female.jpg" alt="Charmer in Charge">
+        </div>
         <h3>Charmer in Charge</h3>
         <a href="/profiles/charmer_in_charge.html">View Profile</a>
       </div>
+
       <div class="card">
-        <img src="/images/the_punish_me_male.jpg" alt="Punish Me">
+        <div class="image-border">
+          <img src="/images/the_punish_me_male.jpg" alt="Punish Me">
+        </div>
         <h3>Punish Me</h3>
         <a href="/profiles/punish_me.html">View Profile</a>
       </div>
+
       <div class="card">
-        <img src="/images/the_provoker_male.jpg" alt="Provoker">
+        <div class="image-border">
+          <img src="/images/the_provoker_male.jpg" alt="Provoker">
+        </div>
         <h3>Provoker</h3>
         <a href="/profiles/provoker.html">View Profile</a>
       </div>
+
       <div class="card">
-        <img src="/images/dungeon_master_female.jpg" alt="Dungeon Master">
+        <div class="image-border">
+          <img src="/images/dungeon_master_female.jpg" alt="Dungeon Master">
+        </div>
         <h3>Dungeon Master</h3>
         <a href="/profiles/dungeon_master.html">View Profile</a>
       </div>
+
       <div class="card">
-        <img src="/images/claimed__trained_female.jpg" alt="Claimed & Trained">
+        <div class="image-border">
+          <img src="/images/claimed__trained_female.jpg" alt="Claimed & Trained">
+        </div>
         <h3>Claimed & Trained</h3>
         <a href="/profiles/claimed_and_trained.html">View Profile</a>
       </div>
