--- a/unlocked-blueprint.html
+++ b/unlocked-blueprint.html
@@ -70,8 +70,7 @@
 
     .image-border img {
       width: 100%;
-      height: 320px;
-      object-fit: cover;
+      height: auto;
       display: block;
     }
 
