--- a/premium-profiles.html
+++ b/premium-profiles.html
@@ -102,7 +102,7 @@
   <div class="border-wrapper">
     <h1>The Forbidden Library</h1>
     <p class="subheading">
-      Unlock all 12 seductive profiles, including personalized erotic stories, psychological insights, turn-ons, and compatibility guides. No guesswork. Just everything.
+      Your Premium Sexual Profile reveals the psychology behind your desires and how it shapes your love life, turn-ons, and compatibility.
     </p>
 
     <div class="card-container">
@@ -113,10 +113,10 @@
           <button class="button">Unlock the Full Library</button>
         </a>
         <ul>
-          <li>Access to all 12 erotic blueprints</li>
-          <li>Premium psychological breakdowns of each archetype</li>
-          <li>All 12 exclusive erotic short stories</li>
-          <li>Turn-on vocabulary, conflict patterns & power dynamics</li>
+          <li>Access to all 12 premium sexual profiles</li>
+          <li>In-ddepth psychological breakdowns of each archetype</li>
+          <li>All 12 personalized erotic short stories</li>
+          <li>Turn-on vocabulary, origins of desire, conflict patterns, power dynamics, & more</li>
           <li>Compare compatibility across every archetype</li>
         </ul>
       </div>
