--- a/premium-profiles.html
+++ b/premium-profiles.html
@@ -109,9 +109,7 @@
       <div class="card">
         <h2>The Forbidden Library</h2>
         <p class="price">$29</p>
-        <a href="https://buy.stripe.com/test_3cI4gB88hgiJ8jWdfWfUQ02">
-          <button class="button">Unlock the Full Library</button>
-        </a>
+        <a href="https://buy.stripe.com/test_dRmeVfdsBd6xcAc4JqfUQ03" class="button">Unlock the Full Library</a>
         <ul>
           <li>Access to all 12 premium sexual profiles</li>
           <li>In-ddepth psychological breakdowns of each archetype</li>
