--- a/premium-profiles.html
+++ b/premium-profiles.html
@@ -96,6 +96,25 @@
       margin-bottom: 10px;
       line-height: 1.5;
     }
+    a.button {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  font-size: 1.1rem;
+  padding: 14px 26px;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  margin-bottom: 25px;
+  transition: background-color 0.3s;
+}
+
+a.button:hover {
+  background-color: #e0e0e0;
+}
   </style>
 </head>
 <body>
