--- a/premium-profiles.html
+++ b/premium-profiles.html
@@ -131,7 +131,7 @@ a.button:hover {
         <a href="https://buy.stripe.com/test_dRmeVfdsBd6xcAc4JqfUQ03" class="button">Unlock the Full Library</a>
         <ul>
           <li>Access to all 12 premium sexual profiles</li>
-          <li>In-ddepth psychological breakdowns of each archetype</li>
+          <li>In-depth psychological breakdowns of each archetype</li>
           <li>All 12 personalized erotic short stories</li>
           <li>Turn-on vocabulary, origins of desire, conflict patterns, power dynamics, & more</li>
           <li>Compare compatibility across every archetype</li>
