--- a/premium-profiles.html
+++ b/premium-profiles.html
@@ -127,7 +127,7 @@
 
     <div class="card-container">
       <div class="card">
-        <h2>The Forbidden Library</h2>
+        <h2>It's a HUGE package</h2>
         <p class="price">$29</p>
         <a href="https://buy.stripe.com/test_dRmeVfdsBd6xcAc4JqfUQ03" class="button">Unlock the Full Library</a>
         <ul>
