--- a/forbidden-library.html
+++ b/forbidden-library.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Erotic Blueprint</title>
+  <title>Forbidden Library</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -100,9 +100,9 @@
 </head>
 <body>
   <div class="border-wrapper">
-    <h1>Your Erotic Blueprint Is Unlocked</h1>
+    <h1>The Forbidden Library Is Unlocked</h1>
     <p class="subheading">
-      Welcome to your Premium Sexual Profile. Click below to access your full psychological deep-dive, turn-on vocabulary, erotic story, and more.
+      Click your sexual profile to access your full psychological deep-dive, turn-on vocabulary, erotic story, and more.
     </p>
 
     <div class="grid">
