--- a/premium/erotic-blueprint_tender_protector.html
+++ b/premium/erotic-blueprint_tender_protector.html
@@ -206,8 +206,10 @@
 
   <div class="content-section">
     <h2>Erotic Edge & Drop</h2>
-    <p><strong>Erotic Edge:</strong> They create emotional safewords. What others crave is how deeply attuned they are—how they can command while still being gentle, read their partner’s breath, and provide security even while being intense. Their superpower is empathic dominance.</p>
-    <p><strong>Erotic Drop (Dealbreaker):</strong> Being disrespected, mocked, or treated like they’re weak for being emotionally available. They shut down instantly if their care is mistaken for weakness or control.</p>
+    <p><strong>Erotic Edge:</strong> What sets you apart is your ability to turn safety into an aphrodisiac. Your edge lies in how deeply your emotional control makes others feel grounded and reassured. It’s not just how you seduce with your touch, it’s how you pull them in, it’s the way you see them fully, hold them steadily, and never flinch when the intensity rises. You’re the rare kind of lover who can slow someone’s heartbeat and make their knees weak at the same time. And when someone finally earns your undivided attention, it feels like being pulled into a star’s orbit: close, warm, inescapable.
+</p>
+    <p><strong>Erotic Drop (Dealbreaker):</strong> Since your strength is so dependable, some people may confuse your steadiness for simplicity, or worse, assume your restraint means you don’t have needs of your own. But your loyalty is not infinite. If your emotional labor is met with entitlement instead of gratitude, you’ll begin to shut down quietly. The fastest way to kill the vibe? Treat your stability like it’s owed instead of sacred.
+</p>
   </div>
 
   <div class="content-section">
