--- a/premium/erotic-blueprint_mood_multiplier.html
+++ b/premium/erotic-blueprint_mood_multiplier.html
@@ -139,11 +139,11 @@
       <h2>Power Dynamic Arc</h2>
       <p><strong>Relationship Trajectory:</strong> Mood Multipliers are responsive switches. Their power dynamic is influenced by mood, emotional context, and partner energy. They can thrive in both dominant and submissive modes, but their polarity must feel emotionally earned and authentic in the moment.</p>
       <ul>
-        <li>Mood-based switch remains fluid → 📊 Steady growth</li>
-        <li class="sub">Relationship remains emotionally co-created and vibrant.</li>
+        <li>Role-based switch remains fluid → 📊 Steady growth</li>
+        <li class="sub">Relationship remains balanced and vibrant.</li>
         <li>Partner tries to force a fixed role → 📉 Sudden drop</li>
         <li class="sub">Mood Multiplier begins to dissociate, feels boxed in or misread.</li>
-        <li>Mood Multiplier leans submissive with a strong, emotionally attuned dominant → 📈 High spike</li>
+        <li>Mood Multiplier leans submissive with a strong, emotionally intelligent dominant → 📈 High spike</li>
         <li class="sub">Deep surrender occurs. Trust leads to euphoric responsiveness.</li>
         <li>Mood Multiplier stays dominant too long → ⚠️ Plateau</li>
         <li class="sub">Connection begins to feel performative or disconnected. Needs polarity refresh.</li>
