--- a/premium/erotic-blueprint_mood_multiplier.html
+++ b/premium/erotic-blueprint_mood_multiplier.html
@@ -159,7 +159,7 @@
       <p><strong>Theoretical Explanations:</strong></p>
       <ul>
         <li>Mimetic Desire Theory:
-          <ul><li class="sub">They crave experiences that allow them to reflect and intensify the desires of their partner. Desire is not about initiating, it’s about co-creating and building in sync.</li></ul>
+          <ul><li class="sub">Desire is contagious. We don’t simply want things; we want what others want. From a young age, we may have witnessed someone behave in a certain way and receive rewards like attention, love, or admiration. In response, we unconsciously learned to mimic that behavior, hoping to be desired or valued in the same way.</li></ul>
         </li>
         <li>Imprintation Theory:
           <ul><li class="sub">Early arousal may have occurred during moments of emotional bonding or shared intensity, reinforcing a lifelong pattern of arousal through mutual responsiveness.</li></ul>
