--- a/premium-profiles.html
+++ b/premium-profiles.html
@@ -116,6 +116,44 @@
     a.button:hover {
       background-color: #e0e0e0;
     }
+    @media (min-width: 1024px) {
+  h1 {
+    font-size: 4rem;
+    margin-top: 30px;
+    margin-bottom: 24px;
+  }
+
+  p.subheading {
+    font-size: 1.5rem;
+    max-width: 900px;
+    margin-bottom: 60px;
+  }
+
+  .card {
+    width: 500px;
+    padding: 50px 40px;
+  }
+
+  .card h2 {
+    font-size: 2.2rem;
+    margin-bottom: 25px;
+  }
+
+  .price {
+    font-size: 2.4rem;
+    margin: 15px 0 25px;
+  }
+
+  .card ul li {
+    font-size: 1.3rem;
+    line-height: 1.7;
+  }
+
+  .button, a.button {
+    font-size: 1.3rem;
+    padding: 18px 34px;
+  }
+}
   </style>
 </head>
 <body>
