--- a/premium/erotic-blueprint_generous_giver.html
+++ b/premium/erotic-blueprint_generous_giver.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Generous Giver – Erotic Blueprint</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="desktop.css">
+  
   <style>
     body {
       background-color: #06954E;
