--- a/premium/erotic-blueprint_heatwave.html
+++ b/premium/erotic-blueprint_heatwave.html
@@ -8,6 +8,8 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet"/>
 
+<link rel="stylesheet" href="desktop.css">
+
   <style>
     :root {
       --blue: #064D95;
