--- a/premium/erotic-blueprint_heatwave.html
+++ b/premium/erotic-blueprint_heatwave.html
@@ -162,7 +162,7 @@
   <ul>
     <li>Imprintation Theory: Their early erotic memories likely involved being the one who unexpectedly took charge and got a powerful response. This created a lifelong link between mood, arousal, and control.</li>
     <li>Self-Esteem Theory: They associate desirability with their ability to stir desire. The more power they feel over the vibe, the more turned on they become.</li>
-    <li>Evolutionary Biological Theory: Heatwaves are wired to lead when the conditions are right. Their dominance signals attraction, strength, and sexual timing, qualities that boost reproductive fitness.</li>
+    <li>Evolutionary Biological Theory: Heatwaves evolved to act only when the conditions are ideal, conserving energy until the perfect moment to assert themselves. This mood-based timing isn’t random, it’s an adaptive strategy. By waiting to lead until the situation is most favorable, they project confidence, control, and leadership, all traits that historically increased their chances of attracting a mate and passing on their genes.</li>
     <li>Psychological Rough-Housing Theory: They play with dominance not to overpower, but to test timing, confidence, and tension. Their desire is exploratory, not forceful.</li>
     <li>Blank Slate Theory: Many Heatwaves were socialized to be chill or emotionally neutral, now they reclaim erotic heat by setting the temperature themselves.</li>
   </ul>
