--- a/premium/erotic-blueprint_generous_giver.html
+++ b/premium/erotic-blueprint_generous_giver.html
@@ -116,7 +116,7 @@
     <li>Giver engages a partner who mirrors their generosity → 📊 Stabilizing recovery</li>
     <li class="sub">Feedback loop of shared giving and receiving</li>
   </ul>
-<p><strong>Ideal Dynamic:</strong> The most fulfilling relationships for a Generous Giver involve a partner who takes pleasure in their pleasure. They crave lovers who receive with gratitude and give with emotional presence. The polarity doesn’t need to be fixed, it just needs to feel mutual and alive.</p>
+<p><strong>Ideal Dynamic:</strong> The most fulfilling relationships for a Generous Giver involve a partner who takes pleasure in their pleasure. They crave lovers who receive with gratitude and give their all in return. The polarity doesn’t need to be fixed, it just needs to feel mutual and alive.</p>
   </div>
     <div class="content-section">
     <h2>Origins of Desire</h2>
