--- a/premium/erotic-blueprint_generous_giver.html
+++ b/premium/erotic-blueprint_generous_giver.html
@@ -182,8 +182,7 @@
 </div>
   <div class="content-section">
     <h2>Erotic Edge & Drop</h2>
-    <p><strong>Erotic Edge:</strong> Their gift is responsive eroticism, the way they track subtle shifts in breath, sound, and tension, and tailor every move to amplify their partner’s pleasure. They’re like erotic symphony conductors. What makes them unforgettable is how present and attuned they are. They eroticize devotion.
-Their superpower is empathic dominance.</p>
+    <p><strong>Erotic Edge:</strong> Their gift is responsive eroticism, the way they track subtle shifts in breath, sound, and tension, and tailor every move to amplify their partner’s pleasure. They’re like erotic symphony conductors. What makes them unforgettable is how present and attuned they are. They eroticize devotion and reciprocity.</p>
     <p><strong>Erotic Drop (Dealbreaker):</strong> Nothing kills their desire faster than selfishness or disinterest. If their generosity is consumed without gratitude, they grow cold. If they feel like a service instead of a partner, they begin to shut down.
 </p>
   </div>
