--- a/premium/erotic-blueprint_promiscuous_plaything.html
+++ b/premium/erotic-blueprint_promiscuous_plaything.html
@@ -104,13 +104,13 @@
   <h2>Description</h2>
   <p>You’re not ashamed of craving attention. You love being watched, wanted, and maybe even worshipped. For you, sex isn’t something to hide—it’s a performance, a thrill, a pulse-racing spectacle of sensation and spontaneity. But what most people miss is that you’re not just craving stimulation. You’re chasing the emotional thrill behind it. You want to feel wanted. You want to feel alive. And when someone can match that energy—when they can keep up with your tempo and play back—you light up like nothing else.</p>
   <h2>Power Dynamic Arc</h2>
-  <p><strong>Relationship Trajectory:</strong> Promiscuous Playthings are adventurous submissives. Their desire is built around attention, intensity, and the emotional thrill of being wanted. They’re turned on by the chase—but they only submit to partners who truly see and value them.</p>
+  <p><strong>Relationship Trajectory:</strong> Promiscuous Playthings are submissives that like to get frisky. Their desire is built around attention, intensity, and the emotional thrill of being wanted. They’re turned on by the chase, but they only submit to partners who truly see and value them.</p>
   <p><strong>Polarity Shift Graph:</strong></p>
   <ul>
     <li>Submissive stays playful with responsive partner → 🔥 Spark builds fast</li>
     <li class="sub">Flirting, teasing, and touch escalate arousal quickly</li>
     <li>Partner gets jealous or controlling → 😬 Craving drops</li>
-    <li class="sub">Feeling owned is hot; feeling caged is not</li>
+    <li class="sub">Feeling owned is hot; feeling smothered is not</li>
     <li>Partner withdraws emotionally → 📉 Performance energy fades</li>
     <li class="sub">Without feedback or attention, desire flatlines</li>
     <li>Partner matches their energy and feeds the game → 💥 Submission offered</li>
@@ -180,7 +180,7 @@
   </ul>
 
   <h2>Erotic Edge & Drop</h2>
-  <p><strong>Erotic Edge:</strong> Promiscuous Playthings are electric. They make their partners feel desired, wanted, and turned on by how openly they crave. Their submission is a performance of pleasure, and it’s intoxicating. Their gift is how much they give to the moment. They don’t hold back—and their partners feel it.</p>
+  <p><strong>Erotic Edge:</strong> Promiscuous Playthings are electric. They make their partners feel desired, wanted, and turned on by how openly they crave. Their submission is a performance of pleasure, and it’s intoxicating. Their gift is how much they live in the moment. They don’t hold back and their partners feel it.</p>
   <p><strong>Erotic Drop (Dealbreaker):</strong> Feeling judged, shamed, or reduced to a stereotype. If their partner stops giving them attention—or mocks the way they ask for it—they’ll feel unsafe and unwanted, and shut down fast. They only bloom when their boldness is met with admiration.</p>
       <!-- Erotic Short Story -->
     <div class="content-section">
