--- a/premium/erotic-blueprint_bedroom_adventurer.html
+++ b/premium/erotic-blueprint_bedroom_adventurer.html
@@ -102,7 +102,7 @@
   </div>
         <h2>Power Dynamic Arc</h2>
     <p><strong>Relationship Trajectory:</strong><br>
-    Bedroom Adventurers thrive in novelty, exploration, and dynamic play. Their polarity is mood-dependent but assertive — they lean dominant when their curiosity is piqued. Relationships flourish when spontaneity is welcome and erotic permission is mutual. Rigidity or repetition leads to detachment.</p>
+    Bedroom Adventurers thrive on novelty, exploration, and dynamic play. The role they take on in a relationship is highly determined by their mood, but they tend to lean dominant, especially when their curiosity is piqued. Their relationships flourish when spontaneity and experimentation are encouraged. They may detach if the connection becomes too rigid or repetitive.</p>
 
     <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
     <ul>
@@ -110,7 +110,7 @@
       <li class="sub">Relationship becomes a thrilling co-creation</li>
       <li>Bedroom Adventurer forced into submissive-only role → 📉 Boredom crash</li>
       <li class="sub">Feels boxed in or misunderstood</li>
-      <li>Adventurer becomes dominant with emotionally closed partner → ⚠️ Flatline</li>
+      <li>Adventurer becomes overpowering with emotionally closed partner → ⚠️ Flatline</li>
       <li class="sub">Mood-driven assertiveness feels misfired or unrewarded</li>
       <li>Mutual exploration with responsive partner → 📊 Renewed spike</li>
       <li class="sub">Trust builds through novelty and permission</li>
@@ -128,7 +128,7 @@
       <li><strong>Imprintation Theory:</strong> Early sexual excitement may have been linked to secrecy, sneaking around, or stumbling into something forbidden, locking in a craving for the unknown.</li>
       <li><strong>Evolutionary Biological Theory:</strong> Their drive for variety may signal genetic fitness or a strategy for reproductive diversity. Their curiosity becomes a mating advantage.</li>
       <li><strong>Diminished Disgust Theory:</strong> Arousal overrides hesitation. They seek out taboo or “weird” pleasures because being turned on lowers their disgust reflex, opening the door to new sensations.</li>
-      <li><strong>Psychological Rough-Housing Theory:</strong> They play with power as a way of learning limits, testing rules, and turning playful defiance into intimacy. They eroticize transgression.</li>
+      <li><strong>Hereditary Theory:</strong> Their creativity and desire to invent new and exciting erotic games, scenarios, and dynamics may be inherited traits. These qualities support bonding, courage, and innovation, all of which historically enhanced survival and reproductive success.</li>
     </ul>
 
     <h2>Turn-On Vocabulary</h2>
