--- a/premium/erotic-blueprint_charmer_in_charge.html
+++ b/premium/erotic-blueprint_charmer_in_charge.html
@@ -102,7 +102,7 @@
   </div>
     <h2>Power Dynamic Arc</h2>
   <p><strong>Relationship Trajectory:</strong><br>
-  The Charmer in Charge doesn’t shift into dominance—it’s simply who they are. Their control is erotic, magnetic, and natural. They don’t force it. They attract it. Relationships flourish when partners surrender willingly, drawn to the Charmer’s charisma, not coerced by power.</p>
+  The Charmer in Charge doesn’t shift into dominance, it’s simply who they are. Their control is erotic, magnetic, and natural. They don’t force it. They attract it. Relationships flourish when partners surrender willingly, drawn to the Charmer’s charisma, not coerced by power.</p>
 
   <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
   <ul>
@@ -117,17 +117,17 @@
   </ul>
 
   <p><strong>Ideal Dynamic:</strong><br>
-  Partners who are already drawn to power and persuasion are the best fit. The Charmer doesn’t demand submission—they invite it with every word, look, and gesture. The ideal partner yields because they want to, not because they have to.</p>
+  Partners who are already drawn to power and persuasion are the best fit. The Charmer doesn’t demand submission; they invite it with every word, look, and gesture. The ideal partner yields not out of pressure, but because they feel hypnotized by the Charmer’s conviction.</p>
 
   <h2>Origins of Desire</h2>
   <p>The Charmer learned early that presence—not pressure—is power. Their sexuality formed around the idea that control is something you’re given because you’ve earned it. They eroticize influence, anticipation, and the moment when someone finally says yes because they want to, not because they were told to.</p>
 
   <p><strong>Theoretical Explanations:</strong></p>
   <ul>
-    <li><strong>Attachment Theory:</strong> Their confident energy comes from secure bonding. They feel safe taking the lead because they believe intimacy doesn’t threaten independence.</li>
-    <li><strong>Mimetic Desire:</strong> They’ve seen that power can be sexy. Authority figures, celebrities, or dominant peers were eroticized, not because they forced control—but because others wanted them.</li>
-    <li><strong>Imprintation:</strong> Early sexual experiences may have included teasing, being watched, or moments where they seduced through charisma rather than force—encoding the thrill of earned control.</li>
-    <li><strong>Social Conditioning:</strong> Their self-image is built around being “the one in charge”—in work, life, and bed. Dominance becomes part of identity, not just a role.</li>
+    <li><strong>Evolutionary Biological Theory:</strong> Their dominance is an instinctive mating signal. By exuding confidence, authority, and emotional steadiness, they broadcast traits that have long been associated with strong leadership and reproductive fitness. Taking charge isn’t a performance; it’s adaptive.</li>
+    <li><strong>Mimetic Desire:</strong> They internalized a truth early on: people want what others desire. By becoming the one others admire, they learned to shape desire itself. Their dominance isn’t just about control; it’s about magnetism. The more they’re wanted, the more powerful they become. The more powerful they become, the more they’re wanted.</li>
+    <li><strong>Self-Esteem Theory:</strong> For them, being trusted, obeyed, and surrendered to reinforces a deep sense of self-worth. Every act of submission from a partner reflects back their value, creating a feedback loop where dominance fuels arousal and arousal fuels identity</li>
+    <li><strong>Blank Slate Theory:</strong> Early in their life they may have been rewarded for being smooth, decisive, and in control. Their erotic style reflects what they were told makes someone desirable.</li>
   </ul>
 
   <h2>Turn-On Vocabulary</h2>
@@ -165,12 +165,13 @@
   <ul>
     <li>Prefers clarity and emotional directness</li>
     <li>Needs reassurance that their dominance is wanted</li>
-    <li>Heals through erotic repair, not long conversations</li>
+    <li>Heals through touch and follow-through, not drawn-out talks.</li>
     <li>Reconnection happens when their confidence is met with trust</li>
   </ul>
 
   <p><strong>Growth Edge:</strong><br>
-  Learning to hold power without needing constant affirmation. Letting go of control when it serves deeper intimacy. Understanding that real seduction includes emotional risk—not just performance.</p>
+  Power isn’t just about being obeyed, but about sensing what someone needs before they speak and leading them there with intention.
+Their next level of dominance comes from guiding someone into emotional surrender, not just physical submission, and knowing the difference.</p>
 
   <h2>Erotic Edge & Drop</h2>
   <p><strong>Erotic Edge:</strong><br>
