--- a/premium/erotic-blueprint_charmer_in_charge.html
+++ b/premium/erotic-blueprint_charmer_in_charge.html
@@ -175,7 +175,7 @@ Their next level of dominance comes from guiding someone into emotional surrende
 
   <h2>Erotic Edge & Drop</h2>
   <p><strong>Erotic Edge:</strong><br>
-  Their erotic superpower is persuasion. They know how to guide a scene without raising their voice. A raised eyebrow, a smirk, a simple command—and suddenly, their partner is undone. The Charmer’s sex appeal is psychological and contagious. You surrender without even realizing it.</p>
+  Their erotic superpower is persuasion, guiding every scene without ever needing to raise their voice. All it takes is a raised eyebrow, a smirk, a simple command, and their partner starts to fall under their spell. The Charmer’s sex appeal is psychological and contagious. Their partner can’t help but surrender, often before they even realize it’s happening.</p>
 
   <p><strong>Erotic Drop (Dealbreaker):</strong><br>
   If their dominance is doubted or constantly tested, they disengage. They lose interest when power struggles replace play. If their charm is seen as manipulation or their leadership isn’t trusted, they go cold.</p>
