--- a/premium/erotic-blueprint_punish_me.html
+++ b/premium/erotic-blueprint_punish_me.html
@@ -175,7 +175,7 @@
 
   <h2>Erotic Edge & Drop</h2>
   <p><strong>Erotic Edge:</strong><br>
-  What others crave is the push-pull tension. The way Punish Me teases control, then begs to be taken. They make dominance fun, a challenge with an emotional reward. Their bratty energy makes surrender feel earned, not given. Partners feel like they’ve won something real.</p>
+  Punish Me thrives in the push-pull of power play, teasing control before begging to be taken. They make dominance feel like a game worth winning, a challenge with emotional stakes. Their bratty energy turns surrender into something earned, not given. Partners walk away feeling like they’ve claimed a prize.</p>
 
   <p><strong>Erotic Drop (Dealbreaker):</strong><br>
   Submission without strength. They lose arousal when a partner backs down, becomes flustered, or tries to “nice” their way into control. They also shut down if their defiance is taken personally rather than erotically.</p>
